--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1178,3 +1178,8 @@ Rohanrao02:
   github: Rohanrao02
   author_image: 'blog-author.jpg'
   email: "rohanrao.jh@gmail.com"
+Rohan-Kamat:
+  name: Rohan R Kamat
+  github: Rohan-Kamat
+  author_image: 'rohan_kamat.jpg'
+  email: 'rohankamat20022002@gmail.com'
